Update Index.html & add banner image

--- a/Index.html
+++ b/Index.html
@@ -47,7 +47,7 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="text-center bg-teal-600 text-white" style="background-image: url('https://placehold.co/1200x450/0d9488/ffffff?text=Kalamazoo+Islamic+Center'); background-size: cover; background-position: center;">
+        <section class="text-center bg-teal-600 text-white" style="background-image: url('Images/banner.jpg'); background-size: cover; background-position: center;">
              <div class="bg-black bg-opacity-50 py-24 px-4">
                 <h1 class="text-4xl md:text-5xl font-bold mb-4">As-salamu alaykum</h1>
                 <p class="text-lg md:text-xl max-w-3xl mx-auto">Welcome to the Kalamazoo Islamic Center, a place for worship, community, and education. We are dedicated to serving the spiritual and social needs of the Muslim community in Kalamazoo.</p>
@@ -106,12 +106,12 @@
     <footer class="bg-gray-800 text-white mt-12">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 text-center">
             <p class="font-semibold text-lg">Kalamazoo Islamic Center</p>
-            <p class="text-gray-400">3501 W. Main Street, Kalamazoo, MI 49006</p>
+            <p class="text-gray-400">1520 W Michigan Ave, Kalamazoo, MI 49006</p>
             <p class="text-gray-400 mt-2">&copy; <span id="footer-year"></span> Kalamazoo Islamic Center. All Rights Reserved.</p>
+            <p class="text-gray-400 mt-2">Site Made with ❤️ & Noor by <a href="https://1cy.tech" target="_parent" class="text-teal-400"></a>Ijaz Ali</a>.</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
-
